--- a/index.html
+++ b/index.html
@@ -1,25 +1,53 @@
 <!doctype html>
 <html>
-    <head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+    <head>
+        <!-- Normalize CSS for better cross-browser compatibility -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css">
+
+        <!-- Page title -->
         <title>Add to Cart</title>
+
+        <!-- Responsive meta tag -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- Preconnect to Google Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+        <!-- Import Rubik font from Google Fonts -->
         <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap" rel="stylesheet">
+
+        <!-- Apple touch icon -->
         <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+        <!-- Favicon icons -->
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
         <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+
+        <!-- Web manifest for PWA -->
         <link rel="manifest" href="/site.webmanifest">
+
+        <!-- Link to the main CSS file -->
         <link rel="stylesheet" href="index.css">
     </head>
     <body>
+        <!-- Main container -->
         <div class="container">
+            <!-- Image -->
             <img src="assets/cat.png">
+
+            <!-- Input field -->
             <input type="text" id="input-field" placeholder="Bread">
+
+            <!-- Add to cart button -->
             <button id="add-button">Add to cart</button>
+
+            <!-- Shopping list -->
             <ul id="shopping-list">
             </ul>
         </div>
+
+        <!-- Link to the main JavaScript file -->
         <script src="index.js" type="module"></script>
     </body>
 </html>
